# neuralplex_study

./: README.md  pyproject.toml
neuralplex_study/materials/: __init__.py
neuralplex_study/methods/: __init__.py
neuralplex_study/methods/notebooks/: main.ipynb
neuralplex_study/results/: __init__.py
