[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuralplex_study"
dynamic = ["version"]
authors = [
  { name="Adam Patterson", email="adam@farar.net" },
]
description = "Neural-pleX Study"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "hatch", 
  "ipykernel"
]

[project.urls]
Homepage = "https://github.com/faranalytics/neuralplex_study"
Issues = "https://github.com/faranalytics/neuralplex_study/issues"

[tool.hatch.version]
path = "__about__.py"

